# baram-45k-h7s

./: .gitignore  README.md
firmware/baram-45k-h7s-boot/: CMakeLists.txt
firmware/baram-45k-h7s-boot/prj/vscode/: baram-45k-h7s.code-workspace
firmware/baram-45k-h7s-boot/src/ap/: ap.c
firmware/baram-45k-h7s-boot/src/bsp/: bsp.c  bsp.h
firmware/baram-45k-h7s-boot/src/bsp/device/: stm32h7rsxx_hal_conf.h  stm32h7rsxx_hal_msp.c
firmware/baram-45k-h7s-boot/src/bsp/ldscript/: STM32H7S3V8TX_BOOT.ld  STM32H7S3V8TX_FLASH.ld
firmware/baram-45k-h7s-boot/src/bsp/startup/: startup_stm32h7s3xx.s
firmware/baram-45k-h7s-boot/src/common/: err_code.h
firmware/baram-45k-h7s-boot/src/hw/: hw.c  hw.h  hw_def.h
firmware/baram-45k-h7s-boot/src/hw/driver/: keys.c  loader.c  micros.c  qspi.c  reset.c
firmware/baram-45k-h7s-boot/tools/: W25Q16JV_BARAM-45K-H7S.stldr
firmware/baram-45k-h7s-ext-loader/: CMakeLists.txt
firmware/baram-45k-h7s-ext-loader/prj/vscode/: baram-45k-h7s.code-workspace
firmware/baram-45k-h7s-ext-loader/src/ap/: Dev_Inf.c  Dev_Inf.h  Loader_Src.h
firmware/baram-45k-h7s-ext-loader/src/bsp/: bsp.c  bsp.h
firmware/baram-45k-h7s-ext-loader/src/bsp/device/: stm32h7rsxx_hal_conf.h  system_stm32h7rsxx.c
firmware/baram-45k-h7s-ext-loader/src/common/hw/include/: qspi.h
firmware/baram-45k-h7s-ext-loader/src/hw/: hw.c  hw_def.h
firmware/baram-45k-h7s-ext-loader/src/hw/driver/: led.c  qspi.c
firmware/baram-45k-h7s-fw/: CMakeLists.txt
firmware/baram-45k-h7s-fw/prj/vscode/: baram-45k-h7s.code-workspace
firmware/baram-45k-h7s-fw/src/ap/: ap.c
firmware/baram-45k-h7s-fw/src/bsp/: bsp.c  bsp.h
firmware/baram-45k-h7s-fw/src/bsp/device/: stm32h7rsxx_hal_conf.h  stm32h7rsxx_hal_msp.c  stm32h7rsxx_it.c
firmware/baram-45k-h7s-fw/src/bsp/ldscript/: STM32H7S3V8TX_BOOT.ld  STM32H7S3V8TX_FLASH.ld
firmware/baram-45k-h7s-fw/src/hw/: hw.c  hw.h  hw_def.h
firmware/baram-45k-h7s-fw/src/hw/driver/: i2c.c  keys.c  qspi.c  rtc.c  uart.c  ws2812.c
firmware/baram-45k-h7s-xip/: CMakeLists.txt
firmware/baram-45k-h7s-xip/prj/vscode/: baram-45k-h7s-xip.code-workspace
firmware/baram-45k-h7s-xip/src/ap/: ap.c
firmware/baram-45k-h7s-xip/src/bsp/: bsp.c
firmware/baram-45k-h7s-xip/src/hw/: hw.c  hw_def.h
firmware/baram-45k-h7s-xip/src/hw/driver/: flash.c  led.c  reset.c
firmware/stm32h7s3-cube/: .mxproject  .project  stm32h7s3-cube.ioc
firmware/stm32h7s3-cube/Appli/: .cproject  .project  STM32H7S3V8TX_ROMxspi1_RAMxspi2_app.ld  stm32h7s3-cube_Appli Debug.launch
firmware/stm32h7s3-cube/Appli/Core/Inc/: stm32h7rsxx_hal_conf.h  stm32h7rsxx_it.h  tim.h  usb_otg.h  xspi.h
firmware/stm32h7s3-cube/Appli/Core/Src/: gpdma.c  gpio.c  i2c.c  main.c  stm32h7rsxx_hal_msp.c  (+5 more)
firmware/stm32h7s3-cube/Boot/: .cproject  .project  STM32H7S3V8TX_RAM.ld
(+43 files in other folders)
